<resources>
    <string name="error_code_1001">获取验证码失败!</string>
    <string name="error_code_1002">SQL数据库出错!</string>
    <string name="error_code_1003">用户名或密码错误!</string>
    <string name="error_code_1004">用户名不可用!</string>
    <string name="error_code_1005">验证码错误!</string>
    <string name="error_code_1006">创建组出错!</string>
    <string name="error_code_1007">此终端无记录!</string>
    <string name="error_code_1008">错误的组ID!</string>
    <string name="error_code_1009">数据库无默认组!</string>
    <string name="error_code_1010">无此终端!</string>
    <string name="error_code_1011">围栏名称重复!</string>
    <string name="error_code_1012">无此电子围栏!</string>
    <string name="error_code_1013">指令发送失败,终端不在线!</string>
    <string name="error_code_1014">称谓(0000)重复!</string>
    <string name="error_code_1015">已绑定,不可重复绑定!</string>
    <string name="error_code_8888">指令错误!</string>
    <string name="error_code_9999">Json 格式错误!</string>
    <string name="error_code_default">获取数据失败!</string>
    <string name="fragment_radio2_table_desc1">里程统计</string>
    <string name="fragment_radio2_table_desc2">运行总览</string>
    <string name="fragment_radio2_table_desc3">超速详单</string>
    <string name="fragment_radio2_table_desc4">报警统计</string>
    <string name="not_find_watch">不存在该信息来源终端!</string>
    <string name="can_not_connect_server">无法连接到服务端，网络异常!</string>
    <string name="play_voice_failed">播放失败!</string>
    <string name="please_select_wear_model">请选择习惯模式!</string>
    <string name="record_will_timeout">录音即将超时!</string>
    <string name="record_has_timeout">录音超时,正在准备上传.</string>
    <string name="please_select_ring">请选择铃声!</string>
    <string name="prepare3">准备中 &#8230;</string>
    <string name="press_and_speak">按住说话</string>
    <string name="slide_cancle">手指上滑,取消发送</string>
    <string name="no_sd_card">无sd卡，无法进行录音!</string>
    <string name="high_desc">cm</string>
    <string name="weith_desc">kg</string>
    <string name="fragment_statistics">统计报表</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="save">保存</string>
    <string name="voice">声音</string>
    <string name="message">聊天</string>
    <string name="zhendong">震动</string>
    <string name="you_admin_and_you_can">您是管理员，您将：</string>
    <string name="remove_myself">仅解绑自己</string>
    <string name="remove_all">解绑所有人</string>
    <string name="wechat">微信</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="screenshots_sharing_failure">截图分享失败!</string>
    <string name="please_install_first">请先安装</string>
    <string name="target_has_reached">目标已达到!</string>
    <string name="target_has_not_set">小红花目标暂未设定!</string>
    <string name="initialization_failed">初始化失败!!!</string>
    <string name="path_planning_error">路径规划失败</string>
    <string name="open_the_gps">请打开GPS进行导航定位</string>
    <string name="check_network_or_input_parameters">路径计算失败，请检查网络或输入参数</string>
    <string name="end_of_the_navigation">导航结束</string>
    <string name="path_calculation_ready">路径计算就绪</string>
    <string name="route_planning_agin">前方路线拥堵，路线重新规划</string>
    <string name="you_have_been_yaw">您已偏航</string>
    <string name="arrive_at_the_destination">到达目的地</string>
    <string name="resent_no_desc">暂无</string>
    <string name="register">注册</string>
    <string name="loading">登陆</string>
    <string name="repeat">重复</string>
    <string name="searching">正在搜索:</string>
    <string name="information_is_null">未查询到相关信息!!!!</string>
    <string name="sex">性别</string>
    <string name="go_here">到那里去</string>
    <string name="enlarge">+</string>
    <string name="shrink">—</string>
    <string name="home_desc">首页</string>
    <string name="location">定位</string>
    <string name="dialog_negative">取消</string>
    <string name="set_flower_num_desc">设置小红花数量</string>
    <string name="dialog_positive">确定</string>
    <string name="baby">宝贝</string>
    <string name="birthday">生日</string>
    <string name="high">身高</string>
    <string name="wight">体重</string>
    <string name="finish">完成</string>
    <string name="history">历史轨迹</string>
    <string name="xiangqing">查看详情>></string>
    <string name="see">查看</string>
    <string name="guanxi">关系编辑</string>
    <string name="hujiao">呼叫</string>
    <string name="luyin">录音</string>
    <string name="monitor">监听</string>
    <string name="is_geting_address">正在获取地址信息</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="relation_relative">亲人</string>
    <string name="location_qiqiu">"获取定位失败请重定位"</string>
    <string name="scanning_state">请将摄像头对准包装盒上左侧二维码进行扫描</string>
    <string name="please_input_imei_desc">请输入IMEI号</string>
    <string name="title_can_not_null">安全区域名称不能为空</string>
    <string name="stroke_circle">米</string>
    <string name="range">半径</string>
    <string name="deletezone">你确定删除该围栏？</string>
    <string name="zonename">安全区域名称:</string>
    <string name="edit">【点击编辑】</string>
    <string name="press_edit">点击编辑</string>
    <string name="addsafety">添加安全区域</string>
    <string name="domainname">区域名称</string>
    <string name="xuexiao">学校</string>
    <string name="home">家</string>
    <string name="homes">点击设置家位置</string>
    <string name="xuexiaos">点击设置学校位置</string>
    <string name="firm">公司</string>
    <string name="customs">自定义</string>
    <string name="input_phone">请输入监听号码</string>
    <string name="new_watch">添加爱车</string>
    <string name="baobei">我的宝贝</string>
    <string name="imei">IMEI</string>
    <string name="shuru">请输入说明书上的IMEI号</string>
    <string name="keyword">请输入关键字</string>
    <string name="search">搜索</string>
    <string name="sim">SIM</string>
    <string name="simka">请输入手机号码</string>
    <string name="saoma">扫码</string>
    <string name="me">我</string>
    <string name="grandpahome">爷爷家</string>
    <string name="teacherhome">老师家</string>
    <string name="cramschool">补习班</string>
    <string name="please">请输入区域名称(家，学校 &#8230;)</string>
    <string name="history_def_name">名称</string>
    <string name="history_def_address">位置</string>
    <string name="change_nick_name">更改昵称</string>
    <string name="queren">手动输入IMEI号</string>
    <string name="zone_desc">GMT-8:00</string>
    <string name="chat">聊天</string>
    <string name="interest">历史</string>
    <string name="account">管理</string>
    <string name="alarm_clock">闹钟</string>
    <string name="volume">音量</string>
    <string name="renewal">续费</string>
    <string name="brightness">亮度</string>
    <string name="app_name">汽车管家</string>
    <string name="time">04:45</string>
    <string name="qr_code">绑定号二维码</string>
    <string name="next">下一步</string>
    <string name="time_desc">工作日</string>
    <string name="shoubiaohuafei">查话费</string>
    <string name="study">上课禁用</string>
    <string name="quit">退出登录</string>
    <string name="map">离线地图</string>
    <string name="set">系统设置</string>
    <string name="change_password">重置密码</string>
    <string name="edit_basics">资料编辑</string>
    <string name="select_bell">铃声选择</string>
    <string name="tiganyouxi">体感游戏</string>
    <string name="xiaohong">小红花榜</string>
    <string name="around">周边产品</string>
    <string name="guangfang">官方活动</string>
    <string name="find_watch">找设备</string>
    <string name="open">已开启</string>
    <string name="message_info"> 断油/电 </string>
    <string name="not_repeat">不重复</string>
    <string name="not_save_and_quit">放弃编辑并退出?</string>
    <string name="start_should_befor_end">开始时间应在结束时间之前!</string>
    <string name="sunday">周日</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="family">管理成员</string>
    <string name="forget_password">忘记密码</string>
    <string name="new_password_not_consistent">新密码不一致</string>
    <string name="password_length_error">密码应为6&#8211;16位</string>
    <string name="telphone_num_desc">手机号码</string>
    <string name="suggest">意见反馈</string>
    <string name="alarm_clock_ringing">闹钟铃声</string>
    <string name="renewal_service">续费服务</string>
    <string name="set_ring_xml_title">设置铃声</string>
    <string name="account_guanli">修改密码</string>
    <string name="user_infos">用户信息</string>
    <string name="location_model">定位模式</string>
    <string name="wearing_habits">佩戴习惯</string>
    <string name="open_unwearing_remind">开启脱落提醒</string>
    <string name="phone_no">号码</string>
    <string name="mute_model">禁止陌生人打入电话</string>
    <string name="body_answer">体感接听</string>
    <string name="parent_desc">家长</string>
    <string name="remove_from_bindind">解除绑定</string>
    <string name="sure_to_set">确定将</string>
    <string name="baby_age">年龄</string>
    <string name="baby_nick_name">昵称</string>
    <string name="edit_baby_nick_name">爱车昵称</string>
    <string name="version">固件版本</string>
    <string name="time_too_short">时间太短!</string>
    <string name="sure_handle">确认提交</string>
    <string name="lanyafangzoudiu">蓝牙防走丢</string>
    <string name="message_tixing">消息提醒</string>
    <string name="action_settings">Settings</string>
    <string name="welecome_string"></string>
    <string name="input_telphone_num">输入手机号</string>
    <string name="please_input_num">请输入手机号码</string>
    <string name="loading_desc">请输入登录密码</string>
    <string name="input_is_error">输入有误</string>
    <string name="set_password">设置密码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_password_again">请再次输入密码</string>
    <string name="please_input_confirm_password">请输入确认新密码</string>
    <string name="input_password">输入密码</string>
    <string name="input_code_has_false">输入验证码有误!</string>
    <string name="get_code_again">重新获取</string>
    <string name="input_code">输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="study_model_add_time_desc">+添加时间段</string>
    <string name="study_model_add_time">添加时间段</string>
    <string name="night">夜间免打扰</string>
    <string name="add_clock_desc">+添加新闹钟</string>
    <string name="add_clock_desc1">添加新闹钟</string>
    <string name="register_desc">验证码已发送到手机 : </string>
    <string name="desc">请输入您的手机号，登入或者新建账号</string>
    <string name="input_your_telphone">请先输入您注册用的手机号</string>
    <string name="get_code_desc">验证码已发送到手机 0000,请注意查收</string>
    <string name="input_new_password">输入新密码</string>
    <string name="input_once_new_password">再次输入新密码</string>
    <string name="connect">正在连接&#8230;</string>
    <string name="power_off">远程关机</string>
    <string name="get_date_fail">获取数据失败!</string>
    <string name="bind_in">绑定于</string>
    <string name="desc1">您的手机号已注册，可直接登录</string>
    <string name="birthday_desc">1991&#8211;02&#8211;05</string>
    <string name="qr_code_desc">新家长可通过扫描下方的二维码，加入家庭</string>
    <string name="add_new_family_member_desc">添加新成员</string>
    <string name="renewal_time">服务有效期：</string>
    <string name="_400_0518_068_"></string>
    <string name="get_message_">接收新消息通知</string>
    <string name="get_code_once_desc">120s</string>
    <string name="camera"> 照相机</string>
    <string name="change_icon_desc"> 更换头像</string>
    <string name="local_album"> 本地相簿</string>
    <string name="location_mode_desc">定位类型说明</string>
    <string name="location_model_gps">GPS定位说明</string>
    <string name="location_model_gps_desc">GPS模块利用美国卫星导航定位系统进行设备定位，室外空旷地，定位精度最佳可达10米左右，缺点是室内定位效果不佳。</string>
    <string name="location_model_wifi">WIFI定位说明</string>
    <string name="location_model_wifi_desc">设备通过WIFI模块，收集周边WIFI热点信息，来计算自身的位置信息，定位精度最佳在50米以内。</string>
    <string name="location_model_base_station">模糊定位说明</string>
    <string name="location_model_base_station_desc">设备通过电信移动运营商的网络（如GSM网），获取自身的位置信息，定位的精准度一般是500米以内。</string>
    <string name="location_model_select_desc">系统会根据场景，自动选择合适的方式。</string>
</resources>