<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_10"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_title_height"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_4"
            android:gravity="center"
            android:text="@string/loading"
            android:textColor="@color/color_11"
            android:textSize="@dimen/textstyle_title" />

        <ImageButton
            android:id="@+id/input_psd_back"
            android:layout_width="@dimen/app_back_width"
            android:layout_height="match_parent"
            android:background="@null"
            android:contentDescription="@string/welecome_string"
            android:padding="13dp"
            android:scaleType="centerInside"
            android:src="@drawable/selector_back_img_ib" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:gravity="center_vertical"
        android:text="@string/input_password"
        android:textColor="@color/color_6"
        android:textSize="@dimen/textstyle_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginLeft="15dp"
        android:gravity="center_vertical"
        android:text="@string/desc1"
        android:textColor="@color/color_8"
        android:textSize="@dimen/textstyle_desc" />

    <EditText
        android:id="@+id/input_psd_edittext"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_loading_edittext"
        android:cursorVisible="true"
        android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="@string/loading_desc"
        android:inputType="textPassword"
        android:maxLength="20"
        android:paddingBottom="3dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="3dp"
        android:textColor="@color/color_6"
        android:textColorHint="@color/color_8"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/textstyle_content" />

    <Button
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_marginRight="15dp"
        android:background="@null"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/forget_password"
        android:textColor="@drawable/selector_loading_textview"
        android:textSize="@dimen/textstyle_desc" />

    <Button
        android:id="@+id/loading_input_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_next_button"
        android:text="@string/next"
        android:textColor="@drawable/selector_next_color"
        android:textSize="@dimen/textstyle_content" />

</LinearLayout>