<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_10"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_title_height" >

        <TextView
            android:id="@+id/input_code_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_4"
            android:gravity="center"
            android:text="@string/get_code"
            android:textColor="@color/color_11"
            android:textSize="@dimen/textstyle_title" />

        <ImageButton
            android:id="@+id/input_code_back"
            android:layout_width="@dimen/app_back_width"
            android:layout_height="match_parent"
            android:background="@null"
            android:contentDescription="@string/welecome_string"
            android:padding="13dp"
            android:scaleType="centerInside"
            android:src="@drawable/selector_back_img_ib" />
    </RelativeLayout>

    <TextView
        android:id="@+id/input_code_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/get_code_desc"
        android:textColor="@color/color_8"
        android:textSize="@dimen/textstyle_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_loading_edittext"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/input_code_edittext"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@null"
            android:cursorVisible="true"
            android:hint="@string/input_code"
            android:inputType="number"
            android:maxLength="15"
            android:paddingBottom="3dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="3dp"
            android:textColor="@color/color_6"
            android:textColorHint="@color/color_8"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/textstyle_content" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/color_9" />

        <Button
            android:id="@+id/input_code_time_tv"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center"
            android:text="@string/get_code_once_desc"
            android:textColor="@drawable/selector_loading_textview"
            android:textSize="@dimen/textstyle_desc" />

        <ImageButton
            android:id="@+id/input_code_time_ib"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/register_qr_code"
            android:visibility="gone" />
    </LinearLayout>

    <Button
        android:id="@+id/input_code_bt_next"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/selector_next_button"
        android:text="@string/next"
        android:textColor="@drawable/selector_next_color"
        android:textSize="@dimen/textstyle_content" />

</LinearLayout>