<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_alertdialog"
    android:orientation="vertical"
    android:paddingBottom="5dp" >

    <TextView
        android:id="@+id/view_select_picture_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/change_icon_desc"
        android:textColor="@color/color_8"
        android:textSize="@dimen/textstyle_content" />

    <Button
        android:id="@+id/view_select_picture_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/view_select_picture_title"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/selector_button_bg_gray_white"
        android:text="@string/camera"
        android:textColor="@color/color_6"
        android:textSize="@dimen/textstyle_content" />

    <Button
        android:id="@+id/view_select_picture_2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/view_select_picture_1"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_button_bg_gray_white"
        android:text="@string/local_album"
        android:textColor="@color/color_6"
        android:textSize="@dimen/textstyle_content" />

    <Button
        android:id="@+id/view_select_picture_cancle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/view_select_picture_2"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_button_bg_white_gray"
        android:text="@string/dialog_negative"
        android:textColor="@color/color_6"
        android:textSize="@dimen/textstyle_content" />

</RelativeLayout>